Health check added, generated files updated New openapi version Dependency uplifts
