# internal/pkg/openapi/api.go
@@ -3,7 +3,7 @@
  *
  * Wage sum - demo application with GO language
  *
- * API version: 0.2.0
+ * API version: 0.3.0
  * Contact: lsmhun@github
  * Generated by: OpenAPI Generator (https://openapi-generator.tech)
  */
@@ -23,10 +23,16 @@ import (
 type EmpApiRouter interface { 
 	AddEmp(http.ResponseWriter, *http.Request)
 	DeleteEmp(http.ResponseWriter, *http.Request)
+	FindEmpsByMgrId(http.ResponseWriter, *http.Request)
 	FindEmpsByType(http.ResponseWriter, *http.Request)
 	GetEmpById(http.ResponseWriter, *http.Request)
 	UpdateEmp(http.ResponseWriter, *http.Request)
-	UpdateEmpWithForm(http.ResponseWriter, *http.Request)
+}
+// MonitoringApiRouter defines the required methods for binding the api requests to a responses for the MonitoringApi
+// The MonitoringApiRouter implementation should parse necessary information from the http request,
+// pass the data to a MonitoringApiServicer to perform the required actions, then write the service results to the http response.
+type MonitoringApiRouter interface { 
+	Health(http.ResponseWriter, *http.Request)
 }
 // SalApiRouter defines the required methods for binding the api requests to a responses for the SalApi
 // The SalApiRouter implementation should parse necessary information from the http request,
@@ -46,10 +52,19 @@ type SalApiRouter interface {
 type EmpApiServicer interface { 
 	AddEmp(context.Context, Emp) (ImplResponse, error)
 	DeleteEmp(context.Context, int64, string) (ImplResponse, error)
+	FindEmpsByMgrId(context.Context, int64) (ImplResponse, error)
 	FindEmpsByType(context.Context, string) (ImplResponse, error)
 	GetEmpById(context.Context, int64) (ImplResponse, error)
 	UpdateEmp(context.Context, Emp) (ImplResponse, error)
-	UpdateEmpWithForm(context.Context, int64, string, string) (ImplResponse, error)
+}
+
+
+// MonitoringApiServicer defines the api actions for the MonitoringApi service
+// This interface intended to stay up to date with the openapi yaml used to generate it,
+// while the service implementation can be ignored with the .openapi-generator-ignore file
+// and updated with the logic required for the API.
+type MonitoringApiServicer interface { 
+	Health(context.Context) (ImplResponse, error)
 }
 
 
